--- a/index.html
+++ b/index.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
-<html lang="zh"><head><meta charset="UTF-8"><title>CRWZ爱一帆 - 高清无码每日更新</title>
-<link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet">
-<style>body{background:#000;color:#fff;text-align:center;font-family:Arial;}h1{color:#ff0066;font-size:3em;}video{max-width:95%;margin:30px auto;border:5px solid #ff0066;border-radius:15px;box-shadow:0 0 20px #ff0066;}img{border-radius:10px;}</style>
-</head><body>
-<h1>CRWZ爱一帆AV站 - 每日无码新番</h1><div id="list"></div>
-<script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
-<script>
-  fetch('videos.json').then(r=>r.json()).then(vids=>{
-    if(vids.length===0){document.getElementById('list').innerHTML='<h2>数据更新中...5分钟后刷新</h2>';return;}
-    vids.forEach(v=>{let d=document.createElement('div');d.innerHTML=
-    `<h2>${v.title}</h2><img src="${v.thumb}" width="350" loading="lazy"><br>
-    <video class="video-js vjs-fluid vjs-big-play-centered" controls preload="auto" data-setup='{}'>
-      <source src="${v.m3u8}" type="application/x-mpegURL">
-    </video><hr style="border:2px dashed #ff0066;">`;
-    document.getElementById('list').appendChild(d);});
-  }).catch(e=>document.getElementById('list').innerHTML='<h2>加载中...检查CF Pages部署</h2>');
-</script></body></html>
+<html>
+<head>
+    <title>CRWZ wyav.tv镜像 - 8000部8K无码</title>
+    <meta charset="utf-8">
+    <style>
+        body {background:#000; color:#ff69b4; text-align:center; font-family:Arial;}
+        h1 {color:pink;}
+        .grid {display:grid; grid-template-columns:repeat(auto-fill, minmax(220px,1fr)); gap:15px; padding:20px;}
+        .item {background:#111; border:1px solid pink; padding:10px; border-radius:10px;}
+        img {width:100%; height:auto; border-radius:8px;}
+        video {width:100%; height:300px; background:#000;}
+        p {word-break:break-all; color:white;}
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+</head>
+<body>
+    <h1>wyav.tv 8000部超清无码实时镜像 - 日更新欧美巨乳/日本极品</h1>
+    <div id="videos" class="grid"></div>
+    <script>
+        fetch('videos.json?t=' + Date.now()).then(r => r.json()).then(data => {
+            const grid = document.getElementById('videos');
+            data.forEach(v => {
+                const div = document.createElement('div');
+                div.className = 'item';
+                div.innerHTML = `<img src="${v.thumb}" alt="${v.title}"><p>${v.title}</p>
+                <video id="video-${data.indexOf(v)}" controls></video>`;
+                grid.appendChild(div);
+                if (Hls.isSupported()) {
+                    var hls = new Hls();
+                    hls.loadSource(v.m3u8);
+                    hls.attachMedia(document.getElementById('video-' + data.indexOf(v)));
+                } else {
+                    document.getElementById('video-' + data.indexOf(v)).src = v.m3u8;
+                }
+            });
+        }).catch(e => document.body.innerHTML += '<p>加载中...刷新试试</p>');
+    </script>
+</body>
+</html>
